--- a/express-db/package.json
+++ b/express-db/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon app.js --exec babel-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.22.6",
+    "@babel/core": "^7.22.8",
+    "@babel/node": "^7.22.6",
+    "@babel/preset-env": "^7.22.7",
+    "babel": "^6.23.0",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.0.0"
